[gd_scene load_steps=3 format=2]

[ext_resource path="res://end_screen.gd" type="Script" id=1]
[ext_resource path="res://default_theme.tres" type="Theme" id=2]

[node name="end_screen" type="Control"]
anchor_right = 1.0
anchor_bottom = 1.0
theme = ExtResource( 2 )
script = ExtResource( 1 )

[node name="ColorRect" type="ColorRect" parent="."]
anchor_right = 1.0
anchor_bottom = 1.0
color = Color( 0, 0, 0, 1 )

[node name="score_msg" type="Label" parent="."]
anchor_left = 0.5
anchor_right = 0.5
margin_left = -162.0
margin_top = 100.0
margin_right = 162.0
margin_bottom = 35.0
text = "You destroyed 12 emitters."

[node name="VBoxContainer" type="VBoxContainer" parent="."]
anchor_left = 0.5
anchor_top = 1.0
anchor_right = 0.5
anchor_bottom = 1.0
margin_left = -97.5
margin_top = -192.0
margin_right = 97.5

[node name="PlayAgainButton" type="Button" parent="VBoxContainer"]
margin_right = 195.0
margin_bottom = 39.0
text = "play again"

[node name="MainMenuButton" type="Button" parent="VBoxContainer"]
margin_top = 43.0
margin_right = 195.0
margin_bottom = 82.0
text = "main menu"

[node name="ExitButton" type="Button" parent="VBoxContainer"]
margin_top = 86.0
margin_right = 195.0
margin_bottom = 125.0
text = "exit"

[connection signal="pressed" from="VBoxContainer/PlayAgainButton" to="." method="_on_PlayAgainButton_pressed"]
[connection signal="pressed" from="VBoxContainer/MainMenuButton" to="." method="_on_MainMenuButton_pressed"]
[connection signal="pressed" from="VBoxContainer/ExitButton" to="." method="_on_ExitButton_pressed"]
